# Lux-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Coding Conventions.html  LICENSE.md  README.md  TODO.md
assets/: TODO.txt  girl.mtl
assets/Shaders/: ImageBasedLighting.frag  depth.vert  fragment_shader2.frag  frustum.frag  frustum.vert  lightFShader.frag  lightVShader.vert  objFShader.frag  objVShader.vert  primitive.frag  primitive.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  vertex_shader2.vert
include/Application/: Application.hpp  Assertion.hpp  EngineSettings.hpp  FPSCounter.hpp  HashedString.hpp  Layer.hpp  Logger.hpp  Pointers.hpp  Profiler.hpp  UUID.hpp  Window.hpp
include/Data Structures/Sparse Sets/: SparseSet.hpp
include/Data Structures/Trees/: Trie.hpp
include/Event/: EventSystem.hpp  Events.hpp  WindowEvent.hpp
include/FileSystem/: FileIO.hpp  FileSystem.hpp
include/Input/: ActionMapper.hpp  Gamepad.hpp  InputDevice.hpp  InputDeviceKeys.hpp  Keyboard.hpp  Mouse.hpp
include/Math/: Color.hpp  MathUtils.hpp  Matrix.hpp  Matrix3.hpp  Matrix4.hpp  Quaternion.hpp  Transform.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/Math/Geometry/: Capsule.hpp  Convex Hull.hpp  Line.hpp  Plane.hpp  Ray.hpp  Sphere.hpp  Spline.hpp  Triangle.hpp
include/Memory/: Allocator.hpp  ArenaAllocator.hpp  PoolAllocator.hpp
include/OpenGL/: Debug.hpp  GpuDefinitions.hpp  MeshRenderer.hpp  OpenGLBuffer.hpp  OpenGLFrameBuffer.hpp  OpenGLGraphicsContext.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenglError.hpp
include/Os/: MacOsWindow.hpp  OsDevice.hpp
include/Renderer/: Model.hpp
include/Renderer/Buffer/: Buffer.hpp  FrameBuffer.hpp  GBuffer.hpp  Layout.hpp
include/Renderer/Camera/: Camera.hpp  CameraController.hpp
include/Renderer/Common/: CommandBuffer.hpp  GPU.hpp  GraphicsContext.hpp  RenderCommand.hpp  RenderPipeline.hpp  RenderSettings.hpp  Renderer.hpp  RendererApi.hpp
include/Renderer/Light/: AmbientLight.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp
include/Renderer/Material/: Material.hpp  PBRMaterial.hpp
include/Renderer/Mesh/: Mesh.hpp  MeshLoader.hpp  Vertex.hpp
include/Renderer/Mesh/MeshParsers/: ObjParser.hpp
include/Renderer/Primitives/: Circle.hpp  Cube.hpp  Cylinder.hpp  IPrimitive.hpp  Plane.hpp  Quad.hpp  Sphere.hpp  Torus.hpp
include/Renderer/RenderPasses/: CompositePass.hpp  ComputePass.hpp  CullPass.hpp  DecalPass.hpp  GeometryPass.hpp  LightPass.hpp  PostProcessPass.hpp  RenderPass.hpp  SSAOPass.hpp  ShadowPass.hpp
include/Renderer/Shader/: FragmentProgramCatalog.hpp  FragmentShader.hpp  Shader.hpp  ShaderCompiler.hpp  ShaderProgram.hpp  UniformBinder.hpp  VertexShader.hpp  VertexShaderCatalog.hpp
include/Renderer/Shader/ShaderNodes/: Attributes.hpp  NumericalConstant.hpp  RenderConstant.hpp  SamplerInfo.hpp  UserConstant.hpp
include/Renderer/Texture/: CubeMap.hpp  Texture.hpp  Texture2D.hpp
include/Scene/: ResourceCache.hpp  Scene.hpp  SceneGraph.hpp  SkyBox.hpp
include/Utils/: ImageLoad.hpp  MortonCode.hpp  ShaderLocation.hpp
scripts/: setup.py  setup.sh  windowsSetup.bat
src/: EntryPoint.cpp
src/Application/: Application.cpp  Logger.cpp  Window.cpp
src/FileSystem/: FileIO.cpp  FileSystem.cpp
src/Input/: Gamepad.cpp  InputDevice.cpp  Keyboard.cpp  Mouse.cpp
src/OpenGL/: OpenGLFrameBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp
src/Os/: MacOsWindow.cpp
src/Renderer/Buffer/: Buffer.cpp  FrameBuffer.cpp
src/Renderer/Camera/: Camera.cpp  CameraController.cpp
src/Renderer/Common/: GPU.cpp  GraphicsContext.cpp  RenderCommand.cpp  Renderer.cpp  RendererApi.cpp
src/Renderer/Mesh/: Mesh.cpp
src/Renderer/Mesh/MeshParsers/: ObjParser.cpp
src/Renderer/Primitives/: Cube.cpp  Plane.cpp
src/Renderer/RenderPasses/: ShadowPass.cpp
src/Renderer/Shader/: Shader.cpp  ShaderCompiler.cpp  ShaderProgram.cpp
src/Renderer/Texture/: CubeMap.cpp  Texture2D.cpp
src/Scene/: Scene.cpp  Skybox.cpp
src/Test/: TestCamera.cpp  TestColor.cpp  TestMatrix3.cpp  TestMatrix4.cpp  TestMesh.cpp  TestMeshLoader.cpp  TestRenderCommand.cpp  TestRenderer.cpp  TestShader.cpp  TestShaderCompiler.cpp  TestTexture.cpp  TestUUID.cpp  TestVector2.cpp  TestVector3.cpp  TestVector4.cpp
src/Test/test/: test_fragment.glsl  test_vertex.glsl
src/Test/test/shaders/: test.frag
src/Utils/: ImageLoad.cpp
